--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -39,13 +39,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Hello, KUSHAL N G!\n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Hello, KUSHAL N G!')"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "2. Add your name below using Markdown syntax:\n",
     "\n",
     "### Your Name\n",
-    "John Doe\n",
+    "KUSHAL N G\n",
     "\n",
     "3. Press **Shift + Enter** to render the Markdown."
    ]
@@ -93,6 +93,14 @@
     "2. Open a new Python 3 notebook (File > New > Notebook).\n",
     "3. Close this new notebook without saving it.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b28ce6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -159,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
